--- a/booking.html
+++ b/booking.html
@@ -95,91 +95,65 @@
         </div>
         <!-- Spinner End -->
 
-        <!-- Header Start -->
-<div class="container-fluid bg-dark px-0">
-    <div class="row gx-0 align-items-center">
-        <!-- Logo & Brand Name -->
-        <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
-            <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-            <h1 class="m-0 fancy-text ms-2"></h1>
-        </div>
-
-         <!-- Contact & Social Links -->
-        <div class="col-lg-9">
-            <div class="row gx-0 bg-white d-none d-lg-flex">
-                <div class="col-lg-7 px-5 text-start">
-                    <div class="h-100 d-inline-flex align-items-center py-2 me-4">
-                        <i class="fa fa-envelope text-primary me-2"></i>
-                        <p class="mb-0">lindahmiriza@gmail.com </p>
-                    </div>
-                    <div class="h-100 d-inline-flex align-items-center py-2">
-                        <i class="fa fa-phone-alt text-primary me-2"></i>
-                        <p class="mb-0">+254 723 225 791</p>
-                    </div>
-                </div>
-                <div class="col-lg-5 px-5 text-end">
-                    <div class="d-inline-flex align-items-center py-2">
-                        <a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                        <a class="me-3" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg== "><i class="fab fa-instagram"></i></a>
-                        <a class="" href=""><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-            </div>
-            
-          <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
-    <!-- Mobile & Tablet Logo (Hidden on large screens) -->
-    <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
-        <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2"></h1>
-    </a>
-
-    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
-        <div class="navbar-nav py-0">
-            <a href="index" class="nav-item nav-link active">Home</a>
-            <a href="about" class="nav-item nav-link">About</a>
-            <a href="service" class="nav-item nav-link">Services</a>
-            <a href="room" class="nav-item nav-link">Rooms</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                <div class="dropdown-menu rounded-0 m-0">
-                    <a href="booking" class="dropdown-item">Booking</a>
-                    <a href="testimonial" class="dropdown-item">Testimonial</a>
-                </div>
-            </div>
-            <a href="contact" class="nav-item nav-link">Contact</a>
-        </div>
+<!-- Header Start -->
+<header>
+  <!-- Top Contact Bar 
+  <div class="container-fluid bg-black text-white py-2 px-lg-5 d-none d-lg-flex align-items-center justify-content-between">
+    <div class="d-flex align-items-center">
+      <div class="me-4 d-flex align-items-center">
+        <i class="fa fa-envelope text-gold me-2"></i>
+        <a href="mailto:lindahmiriza@gmail.com" class="text-white text-decoration-none">lindahmiriza@gmail.com</a>
+      </div>
+      <div class="d-flex align-items-center">
+        <i class="fa fa-phone-alt text-gold me-2"></i>
+        <a href="tel:+254723225791" class="text-white text-decoration-none">+254 723 225 791</a>
+      </div>
     </div>
+    <div class="social-links">
+      <a href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg==" class="text-white me-3" aria-label="Instagram">
+        <i class="fab fa-instagram fa-lg"></i>
+      </a>
+    </div>
+  </div>-->
+
+  <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 px-lg-5 sticky-navbar">
+  <a href="index" class="navbar-brand d-flex align-items-center">
+    <img src="img/logo.jpg" alt="Polarhomes Luxury Homes Logo" class="logo-img me-2" />
+    <h1 class="m-0 fancy-text">Polarhomes</h1>
+  </a>
+
+  <!-- Mobile Toggle -->
+  <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar Links -->
+  <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+    <ul class="navbar-nav ms-auto text-uppercase fw-semibold">
+      <li class="nav-item"><a href="index" class="nav-link active">Home</a></li>
+      <li class="nav-item"><a href="about" class="nav-link">About Us</a></li>
+      <li class="nav-item"><a href="service" class="nav-link">Our Services</a></li>
+      <li class="nav-item"><a href="room" class="nav-link">Our Rooms</a></li>
+      <li class="nav-item"><a href="booking" class="nav-link">Book a Room</a></li>
+      <li class="nav-item"><a href="contact" class="nav-link">Contact Us</a></li>
+      <li class="nav-item"><a href="testimonial" class="nav-link">Reviews</a></li>
+    </ul>
+  </div>
 </nav>
-
-<!-- Styles -->
-<style>
-.logo-img {
-  width: 90px;  
-  height: auto;  
-}
-
-    .fancy-text {
-        font-size: 2rem;
-        font-weight: bold;
-        color: gold; 
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        font-family: "Cinzel", serif;
-        text-shadow: 2px 2px 8px rgba(255, 215, 0, 0.8);
-    }
-</style>
-
-        </div>
-    </div>
-</div>
+</header>
 <!-- Header End -->
+
+<script>
+  window.addEventListener("scroll", function () {
+    const navbar = document.querySelector(".sticky-navbar");
+    if (window.scrollY > 50) {
+      navbar.classList.add("navbar-fixed");
+    } else {
+      navbar.classList.remove("navbar-fixed");
+    }
+  });
+</script>
 
 
         <!-- Page Header Start -->
