--- a/about.html
+++ b/about.html
@@ -239,26 +239,25 @@
  <!--Booking End -->
 
 
- <!-- About Start -->
+<!-- About Start -->
 <div class="container-xxl py-5">
     <div class="container">
         <div class="row g-5 align-items-center">
             <div class="col-lg-6">
                 <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
                 <h1 class="mb-4">Discover <span class="text-primary text-uppercase">Unforgettable Stays</span></h1>
-                <p class="mb-4">
-                    Welcome to <strong>Polarhomes</strong>,your gateway to luxurious and memorable stays in Nairobi, Kenya.
-                    Nestled in the capital city of Kenya, near the Nairobi Expressway, near Jomo Kenyatta International Airport, 
-                    near SGR and close to major shopping center in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
-                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation,
-                    we provide a curated selection of premium accommodations tailored to your needs.
+               <p class="mb-4">
+                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
+                    Nestled in the capital city of Kenya, near the Nairobi Expressway, <strong>near Jomo Kenyatta International Airport</strong>, <strong>near SGR</strong> and close to <strong>major shopping center in Syokimau</strong>, we offer a seamless blend of comfort, convenience, and adventure.
+                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
+                    curated selection of <strong>premium accommodations</strong> tailored to your needs.
                 </p>
-                <div class="row g-3 pb-4">
+		    <div class="row g-3 pb-4">
                     <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">38</h2>
+                                <h2 class="mb-1" data-toggle="counter-up">52</h2>
                                 <p class="mb-0">Premium Listings</p>
                             </div>
                         </div>
@@ -267,7 +266,7 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">94</h2>
+                                <h2 class="mb-1" data-toggle="counter-up">97</h2>
                                 <p class="mb-0">Verified Hosts</p>
                             </div>
                         </div>
@@ -276,7 +275,7 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">193</h2>
+                                <h2 class="mb-1" data-toggle="counter-up">216</h2>
                                 <p class="mb-0">Happy Guests</p>
                             </div>
                         </div>
@@ -284,23 +283,31 @@
                 </div>
                 <a class="btn btn-primary py-3 px-5 mt-2" href="about">Explore More</a>
             </div>
-            <div class="col-lg-6">
-                <div class="row g-3">
-                    <div class="col-6 text-end">
-                        <img class="img-fluid rounded wow zoomIn about-image-1" data-wow-delay="0.1s" src="img/about-image-1.jpg" style="margin-top: 25%;">
-                    </div>
-                    <div class="col-6 text-start">
-                        <img class="img-fluid rounded wow zoomIn about-image-2" data-wow-delay="0.3s" src="img/about-image-2.jpg">
-                    </div>
-                    <div class="col-6 text-end">
-                        <img class="img-fluid rounded wow zoomIn about-image-3" data-wow-delay="0.5s" src="img/about-image-3.jpg">
-                    </div>
-                    <div class="col-6 text-start">
-                        <img class="img-fluid rounded wow zoomIn about-image-4" data-wow-delay="0.7s" src="img/about-image-4.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
+     
+<div class="col-lg-6">
+  <div class="about-gallery">
+    <div class="about-main">
+      <img src="img/about-image-1.jpg" alt="Luxury Stay Polarhomes" class="img-fluid rounded shadow-lg">
+    </div>
+  </div>
+</div>
+
+<style>
+.about-main img {
+  width: 100%;
+  height: auto;
+  max-height: 500px;
+  object-fit: cover;
+  border-radius: 15px;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+.about-main img:hover {
+  transform: scale(1.03);
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
+}
+</style>
+
+<!-- About End -->
 
         <!-- New Section: Our Location -->
         <div class="row g-5 align-items-center mt-5">
@@ -353,43 +360,6 @@
 
 <!-- About End -->
 
-<style>
-    .about-image-1 {
-        width: 75%;
-        height: 300px;
-        object-fit: cover;
-    }
-
-    .about-image-2 {
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
-    }
-
-    .about-image-3 {
-        width: 50%;
-        height: 200px;
-        object-fit: cover;
-    }
-
-    .about-image-4 {
-        width: 75%;
-        height: 300px;
-        object-fit: cover;
-    }
-
-    .about-image-location {
-        width: 100%;
-        height: 450px;
-        object-fit: cover;
-    }
-
-    .about-image-expect {
-        width: 100%;
-        height: 450px;
-        object-fit: cover;
-    }
-</style>
 
 
 <!-- Footer Start -->
