--- a/index.html
+++ b/index.html
@@ -356,36 +356,18 @@
                 </div>
                 <a class="btn btn-primary py-3 px-5 mt-2" href="about">Explore More</a>
             </div>
-     
-            <div class="col-lg-6">
+<div class="col-lg-6">
   <div class="about-gallery">
-    <!-- Main Large Image -->
     <div class="about-main">
       <img src="img/about-image-1.jpg" alt="Luxury Stay Polarhomes" class="img-fluid rounded shadow-lg">
-    </div>
-
-    <!-- Secondary Images -->
-    <div class="about-sub">
-      <img src="img/about-image-2.jpg" alt="Premium Apartments" class="img-fluid rounded shadow">
-      <img src="img/about-image-3.jpg" alt="Modern Interiors" class="img-fluid rounded shadow">
-      <img src="img/about-image-4.jpg" alt="Cozy Living" class="img-fluid rounded shadow">
     </div>
   </div>
 </div>
 
 <style>
-/* Container */
-.about-gallery {
-  display: grid;
-  grid-template-columns: 2fr 1fr; /* Large image left, small gallery right */
-  gap: 15px;
-  align-items: center;
-}
-
-/* Main Image */
 .about-main img {
   width: 100%;
-  height: 100%;
+  height: auto;
   max-height: 500px;
   object-fit: cover;
   border-radius: 15px;
@@ -395,41 +377,9 @@
   transform: scale(1.03);
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
 }
-
-/* Sub Gallery */
-.about-sub {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 15px;
-}
-.about-sub img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 12px;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
-}
-.about-sub img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-}
-
-/* Responsive */
-@media (max-width: 991.98px) {
-  .about-gallery {
-    grid-template-columns: 1fr;
-  }
-  .about-sub {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .about-sub img {
-    height: 180px;
-  }
-}
 </style>
+
 <!-- About End -->
-
-
 
 <!-- Room Start -->
 <div class="container-xxl py-5">
