--- a/booking.html
+++ b/booking.html
@@ -97,25 +97,6 @@
 
 <!-- Header Start -->
 <header>
-  <!-- Top Contact Bar 
-  <div class="container-fluid bg-black text-white py-2 px-lg-5 d-none d-lg-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center">
-      <div class="me-4 d-flex align-items-center">
-        <i class="fa fa-envelope text-gold me-2"></i>
-        <a href="mailto:lindahmiriza@gmail.com" class="text-white text-decoration-none">lindahmiriza@gmail.com</a>
-      </div>
-      <div class="d-flex align-items-center">
-        <i class="fa fa-phone-alt text-gold me-2"></i>
-        <a href="tel:+254723225791" class="text-white text-decoration-none">+254 723 225 791</a>
-      </div>
-    </div>
-    <div class="social-links">
-      <a href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg==" class="text-white me-3" aria-label="Instagram">
-        <i class="fab fa-instagram fa-lg"></i>
-      </a>
-    </div>
-  </div>-->
-
   <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 px-lg-5 sticky-navbar">
   <a href="index" class="navbar-brand d-flex align-items-center">
@@ -155,23 +136,69 @@
   });
 </script>
 
+<!-- Page Header Start -->
+<div class="container-fluid page-header mb-5 p-0 position-relative" 
+     style="background: url('img/carousel-2.jpg') center center / cover no-repeat; min-height: 60vh;">
+    
+    <!-- Overlay Gradient -->
+    <div class="page-header-overlay position-absolute top-0 start-0 w-100 h-100" 
+         style="background: linear-gradient(180deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.85) 100%);">
+    </div>
 
-        <!-- Page Header Start -->
-        <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
-            <div class="container-fluid page-header-inner py-5">
-                <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Booking</h1>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Booking</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
+    <div class="container-fluid page-header-inner h-100 d-flex align-items-center justify-content-center">
+        <div class="container text-center text-white position-relative" style="z-index: 2;">
+            <!-- Title -->
+            <h1 class="display-3 fw-bold mb-3 animated fadeInDown" 
+                style="letter-spacing: 2px; color: #fff; text-shadow: 0 4px 10px rgba(0,0,0,0.6);">
+                About Us
+            </h1>
+
+            <!-- Gold Divider -->
+            <div class="mx-auto mb-4" style="width: 80px; height: 4px; background: linear-gradient(90deg, #d4af37, #ffd700); border-radius: 2px;"></div>
+
+            <!-- Breadcrumb -->
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb justify-content-center text-uppercase" style="font-size: 0.9rem;">
+                    <li class="breadcrumb-item">
+                        <a href="/" class="text-white-50 fw-semibold hover-gold">Home</a>
+                    </li>
+                    <li class="breadcrumb-item active text-gold fw-bold" aria-current="page">Booking</li>
+                </ol>
+            </nav>
         </div>
-        <!-- Page Header End -->
+    </div>
+</div>
+<!-- Page Header End -->
+
+<!-- Extra Styling -->
+<style>
+    .text-gold {
+        color: #d4af37 !important;
+    }
+    .hover-gold:hover {
+        color: #ffd700 !important;
+        text-decoration: none;
+    }
+
+    /* Responsive Title */
+    @media (max-width: 768px) {
+        .page-header h1 {
+            font-size: 2.2rem !important;
+        }
+    }
+
+    @media (min-width: 769px) and (max-width: 1200px) {
+        .page-header h1 {
+            font-size: 2.8rem !important;
+        }
+    }
+
+    @media (min-width: 1201px) {
+        .page-header h1 {
+            font-size: 3.5rem !important;
+        }
+    }
+</style>
 
         <!-- Booking Start -->
         <div class="container-xxl py-5">
