--- a/room.html
+++ b/room.html
@@ -137,22 +137,69 @@
   });
 </script>
 	    
-        <!-- Page Header Start -->
-        <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
-            <div class="container-fluid page-header-inner py-5">
-                <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Rooms</h1>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="index">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Rooms</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
+<!-- Page Header Start -->
+<div class="container-fluid page-header mb-5 p-0 position-relative" 
+     style="background: url('img/carousel-2.jpg') center center / cover no-repeat; min-height: 60vh;">
+    
+    <!-- Overlay Gradient -->
+    <div class="page-header-overlay position-absolute top-0 start-0 w-100 h-100" 
+         style="background: linear-gradient(180deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.85) 100%);">
+    </div>
+
+    <div class="container-fluid page-header-inner h-100 d-flex align-items-center justify-content-center">
+        <div class="container text-center text-white position-relative" style="z-index: 2;">
+            <!-- Title -->
+            <h1 class="display-3 fw-bold mb-3 animated fadeInDown" 
+                style="letter-spacing: 2px; color: #fff; text-shadow: 0 4px 10px rgba(0,0,0,0.6);">
+                About Us
+            </h1>
+
+            <!-- Gold Divider -->
+            <div class="mx-auto mb-4" style="width: 80px; height: 4px; background: linear-gradient(90deg, #d4af37, #ffd700); border-radius: 2px;"></div>
+
+            <!-- Breadcrumb -->
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb justify-content-center text-uppercase" style="font-size: 0.9rem;">
+                    <li class="breadcrumb-item">
+                        <a href="/" class="text-white-50 fw-semibold hover-gold">Home</a>
+                    </li>
+                    <li class="breadcrumb-item active text-gold fw-bold" aria-current="page">Rooms</li>
+                </ol>
+            </nav>
         </div>
-        <!-- Page Header End -->
+    </div>
+</div>
+<!-- Page Header End -->
+
+<!-- Extra Styling -->
+<style>
+    .text-gold {
+        color: #d4af37 !important;
+    }
+    .hover-gold:hover {
+        color: #ffd700 !important;
+        text-decoration: none;
+    }
+
+    /* Responsive Title */
+    @media (max-width: 768px) {
+        .page-header h1 {
+            font-size: 2.2rem !important;
+        }
+    }
+
+    @media (min-width: 769px) and (max-width: 1200px) {
+        .page-header h1 {
+            font-size: 2.8rem !important;
+        }
+    }
+
+    @media (min-width: 1201px) {
+        .page-header h1 {
+            font-size: 3.5rem !important;
+        }
+    }
+</style>
 
 <!-- Booking Start -->
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
